--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -1,6 +1,8 @@
-<div id="footer">
+<div class="footer">
   <div class="block">
-    <br />
+    <p class="pull-right">
+      <a href="#">Back to top</a>
+    </p>
     <p>
       <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> &bull;
       <%= link_to('Privacy Policy', page_path('privacy'), :data => {:pjax => '#main'}) %> &bull;
