--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -1,63 +1,46 @@
-<div class="block article">
-  <div class="content">
-    <div class="inner">
+<div class="page-header">
+  <h1>Donate</h1>
+  <small>How do I contribute?</small>
+</div>
 
-      <h1>Donate</h1>
+<p>
+  EntryDNS is a free service for everyone, but contribution is more than welcome. 
+  Like every service, it needs some hardware to run on, requires network bandwidth and maintenance.
+</p>
 
-      <p>How do I contribute?</p>
+<p>
+  If you wish to contribute, you can send us any amount of money which will help us pay 
+  hosting and network bandwidth bills as well as to expand our name server nodes across 
+  the world for better response times and availability. 
+</p>
 
-      <p>
-        EntryDNS is a free service for everyone, but contribution is more than welcome. 
-        Like every service, it needs some hardware to run on, requires network bandwidth and maintenance.
-      </p>
-
-      <p>
-        If you wish to contribute, you can send us any amount of money which will help us pay 
-        hosting and network bandwidth bills as well as to expand our name server nodes across 
-        the world for better response times and availability. 
-      </p>
-
-      <table class="donate-table">
-        <tr class="curency">
-          <td>&euro; EUR</td>
-          <td>$ USD</td>
-          <td>&pound; GBP</td>
-        </tr>
-
-        <tr>
-          <td>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="7FQMY358VCKA6">
-              <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
-              <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-            </form>
-
-          </td>
-          <td>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="5U3JLJAAKRGPJ">
-              <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
-              <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-            </form>
-
-          </td>
-          <td>
-
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-              <input type="hidden" name="cmd" value="_s-xclick">
-              <input type="hidden" name="hosted_button_id" value="WJJWPYZBBBKUG">
-              <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
-              <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
-            </form>
-
-          </td>
-        </tr>
-      </table>
-
-    </div>
+<div class="row">
+  <div class="span4">
+    <h3>&euro; EUR</h3>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="7FQMY358VCKA6">
+      <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+    </form>
+  </div>
+  <div class="span4">
+    <h3>$ USD</h3>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="5U3JLJAAKRGPJ">
+      <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+    </form>
+  </div>
+  <div class="span4">
+    <h3>&pound; GBP</h3>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+      <input type="hidden" name="cmd" value="_s-xclick">
+      <input type="hidden" name="hosted_button_id" value="WJJWPYZBBBKUG">
+      <input type="image" src="https://www.paypalobjects.com/en_US/GB/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal — The safer, easier way to pay online.">
+      <img alt="" border="0" src="https://www.paypalobjects.com/en_GB/i/scr/pixel.gif" width="1" height="1">
+    </form>
   </div>
 </div>
+
