--- a/app/views/pages/team.html.erb
+++ b/app/views/pages/team.html.erb
@@ -1,20 +1,12 @@
-<div class="block article">
-  <div class="content">
-    <div class="inner team">
-      
-      <h1>Meet the founders</h1>
+<div class="page-header">
+  <h1>Meet the founders</h1>
+</div>
 
-      <table>
-        <tr>
-          <td class="bio">
-            <%= render :partial => 'pages/team/zooz' %>
-          </td>
-          <td class="bio">
-            <%= render :partial => 'pages/team/clyfe' %>
-          </td>
-        </tr>
-      </table>
-      
-    </div>
+<div class="row">
+  <div class="span6">
+    <%= render :partial => 'pages/team/zooz' %>
+  </div>
+  <div class="span6">
+    <%= render :partial => 'pages/team/clyfe' %>
   </div>
 </div>
