--- a/app/views/pages/team/_clyfe.html.erb
+++ b/app/views/pages/team/_clyfe.html.erb
@@ -1,4 +1,4 @@
-<h2>Claudius Nicolae <em>Programmer</em></h2>
+<h4>Claudius Nicolae <small>Programmer</small></h4>
 
 <p>
   He is a software developer from Romania. He has a 
