--- a/app/views/pages/team/_zooz.html.erb
+++ b/app/views/pages/team/_zooz.html.erb
@@ -1,4 +1,4 @@
-<h2>Vaidas Jablonskis <em>System Administrator</em></h2>
+<h4>Vaidas Jablonskis <small>System Administrator</small></h4>
 
 <p>
   He began his career as a Linux systems user and quickly became involved with 
