--- a/app/assets/stylesheets/theme/error_explanation.css.scss
+++ b/app/assets/stylesheets/theme/error_explanation.css.scss
@@ -1,7 +1,7 @@
 @import 'compass/css3/border-radius';
 @import 'compass/css3/text-shadow';
 
-#main .block .content {
+.content {
     #error_explanation {
         @include border-top-radius(6px);
         border-left: 1px solid #993624;
