--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -10,7 +10,7 @@
   <div><%= f.label :password_confirmation, "Confirm new password" %>
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div><%= f.submit "Change my password", class: 'btn-primary' %></div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
