--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -4,7 +4,8 @@
     <h2>Edit <%= resource_name.to_s.humanize %></h2>
     <div class="content login">
 
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
+        :html => { :method => :put }) do |f| %>
         <%= devise_error_messages! %>
 
         <div><%= f.label :first_name %>
@@ -25,24 +26,23 @@
         <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
           <%= f.password_field :current_password %></div>
 
-        <div><%= f.submit "Update" %></div>
-      <% end %>
+        <div><%= f.submit "Update", class: 'btn-primary' %>
+            <%= link_to "Back", :back %></div>
+        <% end %>
 
-      <br />
-      <%= link_to "Back", :back %>
-      <br />  
+        <hr />
 
-      <hr />
-      
-      <div class="danger-zone">
-        <h3>Danger zone</h3>
-        <p>
-          If you cancel your account all your data will be deleted!
-          <%= button_to "Cancel account", registration_path(resource_name), 
-            :confirm => "All your data will be deleted! Are you sure?", :method => :delete %>
-        </p>
+        <div class="danger-zone">
+          <h3>Danger zone</h3>
+          <p>
+            If you cancel your account all your data will be deleted!
+            <%= button_to "Cancel account", registration_path(resource_name),
+              class: 'btn-danger',
+                confirm: "All your data will be deleted! Are you sure?", 
+                method: :delete %>
+            </p>
+          </div>
+
+        </div>
       </div>
-
     </div>
-  </div>
-</div>
