--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
         <div><%= f.label :password_confirmation %>
           <%= f.password_field :password_confirmation %></div>
 
-        <div><%= f.submit "Sign up" %></div>
+        <div><%= f.submit "Sign up", class: 'btn-primary' %></div>
       <% end %>
 
       <%= render :partial => "devise/shared/links" %>
