--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -6,7 +6,7 @@
   <div><%= f.label :email %>
   <%= f.email_field :email %></div>
 
-  <div><%= f.submit "Resend unlock instructions" %></div>
+  <div><%= f.submit "Resend unlock instructions", class: 'btn-primary' %></div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
