--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,16 +1,11 @@
-<div class="block article">
-  <div class="content">
-    <div class="inner">
-
-      <h1>Contact us</h1>
-
-      <p>
-        Our email address is <%= mail_to Settings.support_mail %> ,
-        or you can contact us using the form below:
-      </p>
-
-      <%= render :partial => 'pages/contact/form' %>
-
-    </div>
-  </div>
+<div class="page-header">
+  <h1>Contact us</h1>
 </div>
+
+<p>
+  Our email address is <%= mail_to Settings.support_mail %> ,
+  or you can contact us using the form below:
+</p>
+
+<%= render :partial => 'pages/contact/form' %>
+
