--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,61 +1,57 @@
-<div class="block home-page-block article">
-  <div class="content">
-    <h1>Totally Free DNS service for everyone <small>created by Geeks</small></h1>
-    <div class="inner home-page-inner">
+<div class="page-header">
+  <h1>
+    Totally Free DNS service for everyone 
+    <small>created by Geeks</small>
+    <span class="pull-right">
+      <%= link_to 'Tweet', "https://twitter.com/share", :class => "twitter-share-button", :data => {
+        :url => root_url,
+        :text => "EntryDNS a nice free DNS service",
+        :count => "horizontal",
+        :via => "entrydns",
+        :related => "_clyfe:vaijab"
+      } %>
+    </span>
+  </h1>
+</div>
 
-      <table class="home-page-duo">
-        <tr>
-          <td class="home-page-text">
-            <%= render :partial => 'pages/home/headlines' %>
-            <br />
-            <%= render :partial => 'pages/fragments/action' %>
-          </td>
-          <td class="home-page-images">
-            <%= render :partial => 'pages/home/slides' %>
-          </td>
-        </tr>
-      </table>
-
-    </div>
+<div class="row">
+  <div class="span6">
+    <%= render :partial => 'pages/home/headlines' %>
+    <%= render :partial => 'pages/fragments/action' %>
+  </div>
+  <div class="span6">
+    <%= render :partial => 'pages/home/slides' %>
   </div>
 </div>
 
-<table class="home-page-duo">
-  <tr>
-    <td>
-      <blockquote>
-        We are two geeks who built a free DNS service to fill a void in this space.
-        The service is free and we hope to support it on either a freemium model or some sort of affiliate sales.
-      </blockquote>
-    </td>
-    <td>
-      <blockquote>
-        Note that we just started it, and there are still things to be done, it's still a work in progress.
-        Nevertheless the service is at this point functional and there are people already using it.
-      </blockquote>
-    </td>
-  </tr>
-</table>
+<hr />
 
-<div class="block">
-  <div class="content">
-    <div class="inner home-page-second">
-
-      <table class="home-page-duo">
-        <tr>
-          <td class="home-page-text">
-            <h2>Benefits</h2>
-            <%= render 'pages/fragments/benefits' %>
-            <br /><br />
-            <%= render :partial => 'pages/fragments/action' %>
-          </td>
-          <td class="home-page-images">
-            <h2>Features</h2>
-            <%= render 'pages/fragments/features' %>
-          </td>
-        </tr>
-      </table>
-
-    </div>
+<div class="row">
+  <div class="span6">
+    <blockquote>
+      We are two geeks who built a free DNS service to fill a void in this space.
+      The service is free and we hope to support it on either a freemium model or some sort of affiliate sales.
+    </blockquote>
+  </div>
+  <div class="span6">
+    <blockquote>
+      Note that we just started it, and there are still things to be done, it's still a work in progress.
+      Nevertheless the service is at this point functional and there are people already using it.
+    </blockquote>
   </div>
 </div>
+
+<hr />
+
+<div class="row">
+  <div class="span6">
+      <h3>Benefits</h3>
+      <%= render 'pages/fragments/benefits' %>
+      <%= render :partial => 'pages/fragments/action' %>
+  </div>
+  <div class="span6">
+      <h3>Features</h3>
+      <%= render 'pages/fragments/features' %>
+  </div>
+</div>
+
