--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,8 +4,7 @@
 * the top of the compiled file, but it's generally better to create a new file per style scope.
 
 *= require_self
-*= require theme/error_explanation
-*= require pages/edit_account
+*= require theme/errors
 *= require pages/domains
 *= require slides
 */
