--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,40 @@
-<div id="box">
-  <div class="block" id="block-login">
+<div class="page-header">
+  <h1>Edit <%= resource_name.to_s.humanize %></h1>
+</div>
 
-    <h2>Edit <%= resource_name.to_s.humanize %></h2>
-    <div class="content login">
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
+  :html => { :method => :put }) do |f| %>
+  <%= devise_error_messages! %>
 
-      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
-        :html => { :method => :put }) do |f| %>
-        <%= devise_error_messages! %>
+  <div><%= f.label :first_name %>
+    <%= f.text_field :first_name %></div>
 
-        <div><%= f.label :first_name %>
-          <%= f.text_field :first_name %></div>
+  <div><%= f.label :last_name %>
+    <%= f.text_field :last_name %></div>
 
-        <div><%= f.label :last_name %>
-          <%= f.text_field :last_name %></div>
+  <div><%= f.label :email %>
+    <%= f.email_field :email %></div>
 
-        <div><%= f.label :email %>
-          <%= f.email_field :email %></div>
+  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+    <%= f.password_field :password %></div>
 
-        <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-          <%= f.password_field :password %></div>
+  <div><%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation %></div>
 
-        <div><%= f.label :password_confirmation %>
-          <%= f.password_field :password_confirmation %></div>
+  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+    <%= f.password_field :current_password %></div>
 
-        <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-          <%= f.password_field :current_password %></div>
+  <div><%= f.submit "Update", class: 'btn-primary' %>
+      <%= link_to "Back", :back %></div>
+<% end %>
 
-        <div><%= f.submit "Update", class: 'btn-primary' %>
-            <%= link_to "Back", :back %></div>
-        <% end %>
+<hr />
 
-        <hr />
-
-        <div class="danger-zone">
-          <h3>Danger zone</h3>
-          <p>
-            If you cancel your account all your data will be deleted!
-            <%= button_to "Cancel account", registration_path(resource_name),
-              class: 'btn-danger',
-                confirm: "All your data will be deleted! Are you sure?", 
-                method: :delete %>
-            </p>
-          </div>
-
-        </div>
-      </div>
-    </div>
+<div class="alert alert-error">
+  <h3>Danger zone</h3>
+  <%= link_to "Cancel account", registration_path(resource_name),
+    class: 'btn btn-danger pull-right',
+    confirm: "All your data will be deleted! Are you sure?", 
+    method: :delete %>
+  <p>If you cancel your account all your data will be deleted!</p>
+</div>
