--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,4 +1,6 @@
-<h2>Resend unlock instructions</h2>
+<div class="page-header">
+  <h1>Resend unlock instructions</h1>
+</div>
 
 <%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
