--- a/app/views/fragments/navigation/_application.html.erb
+++ b/app/views/fragments/navigation/_application.html.erb
@@ -16,7 +16,7 @@
     <% end %>
   </li>
 </ul>
-  
+
 <ul class="nav pull-right">
   <li>
     <%= link_to(Settings.news_link, rel: 'tooltip', title: Settings.news_link) do %>
@@ -26,18 +26,26 @@
   <li>
     <%= link_to(page_path('donate'), rel: 'tooltip', title: 'PayPal', 
       class: 'highlight', data: {pjax: '#main'}) do %>
-      <i class="icon-white icon-heart"></i> Donate
-    <% end %>
-  </li>
-  <li>
-    <%= link_to(edit_user_registration_path, rel: 'tooltip', 
-      :title => "IP: #{client_remote_ip}", data: {pjax: '#main'}) do %>
-      <i class="icon-white icon-user"></i> <%= current_user.email %>
-    <% end %>
-  </li>
-  <li>
-    <%= link_to(destroy_user_session_path, method: :delete) do %>
-      <i class="icon-white icon-off"></i> Sign out
-    <% end %>
-  </li>
-</ul>
+        <i class="icon-white icon-heart"></i> Donate
+      <% end %>
+    </li>
+
+    <li class="dropdown">
+      <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+        <i class="icon-white icon-user"></i> <%= current_user.email %> <b class="caret"></b>
+      </a>
+      
+      <ul class="dropdown-menu">
+        <li>
+          <%= link_to(edit_user_registration_path, rel: 'tooltip', 
+            :title => "IP: #{client_remote_ip}", data: {pjax: '#main'}) do %>
+            <i class="icon-cog"></i> Settings
+          <% end %>
+        </li>
+        <li>
+          <%= link_to(destroy_user_session_path, method: :delete) do %>
+            <i class="icon-off"></i> Sign out
+          <% end %>
+        </li>
+      </ul>
+  </ul>
