--- a/app/views/pages/home/_slides.html.erb
+++ b/app/views/pages/home/_slides.html.erb
@@ -1,9 +1,10 @@
 <div id="slidesWrapper">
   <div id="slides">
-    <%= image_tag 'marketing/domains.jpg' %>
-    <%= image_tag 'marketing/records.jpg' %>
-    <%= image_tag 'marketing/domain.new.jpg' %>
-    <%= image_tag 'marketing/hosts.jpg' %>
+    <%= image_tag 'marketing/1.png' %>
+    <%= image_tag 'marketing/2.png' %>
+    <%= image_tag 'marketing/3.png' %>
+    <%= image_tag 'marketing/4.png' %>
+    <%= image_tag 'marketing/5.png' %>
   </div>
 </div>
 
