--- a/app/views/layouts/errors.html.erb
+++ b/app/views/layouts/errors.html.erb
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EntryDNS</title>
+    <title><%= content_for?(:title) ? yield(:title) : "EntryDNS" %></title>
     
     <%= stylesheet_link_tag    "application" %>
     <%= javascript_include_tag "application" %>
