--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -5,10 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EntryDNS free DNS service and dynamic DNS</title>
+    <title><%= content_for?(:title) ? yield(:title) : "EntryDNS free DNS service and dynamic DNS" %></title>
 
-    <meta name="description" content="EntryDNS free DNS service and dynamic DNS" />
-    <meta name="keywords" content="DNS, free, service, dynamic, management, hosting" />
+    <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "EntryDNS free DNS service and dynamic DNS" %>" />
+    <meta name="keywords" content="<%= content_for?(:keywords) ? yield(:keywords) : "DNS, free, service, dynamic, management, hosting" %>" />
     <meta name="author" content="EntryDNS Team" />
 
     <%= stylesheet_link_tag    "application" %>
