--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -2,17 +2,23 @@
   <h1>Change your password</h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :put }) do |f| %>
+<%= simple_form_for(resource,
+    as: resource_name,
+    url: password_path(resource_name),
+    html: { method: :put, class: 'form-horizontal' }
+  ) do |f| %>
+  
   <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
-
-  <div><%= f.label :password, "New password" %>
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation, "Confirm new password" %>
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Change my password", class: 'btn-primary' %></div>
+  
+  <div class="inputs">
+    <%= f.hidden_field :reset_password_token %>
+    <%= f.input :password, label: "New password" %>
+    <%= f.password_field :password_confirmation, label: "Confirm new password" %></div>
+  </div>
+  
+  <div class="form-actions">
+    <%= f.submit "Change my password", class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
