--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -2,13 +2,21 @@
   <h1>Forgot your password?</h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+<%= simple_form_for(resource, 
+    as: resource_name,
+    url: password_path(resource_name),
+    html: { method: :post, class: 'form-horizontal' }
+  ) do |f| %>
+  
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %>
-  <%= f.email_field :email %></div>
-
-  <div><%= f.submit "Send me reset password instructions", class: 'btn-primary' %></div>
+  <div class="inputs">
+    <%= f.input :email %>
+  </div>
+  
+  <div class="form-actions">
+    <%= f.submit "Send me reset password instructions", class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
