--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,30 +2,27 @@
   <h1>Edit <%= resource_name.to_s.humanize %></h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), 
-  :html => { :method => :put }) do |f| %>
+<%= simple_form_for(resource,
+    as: resource_name,
+    url: registration_path(resource_name), 
+    html: { method: :put, class: 'form-horizontal' }
+  ) do |f| %>
+  
   <%= devise_error_messages! %>
 
-  <div><%= f.label :first_name %>
-    <%= f.text_field :first_name %></div>
-
-  <div><%= f.label :last_name %>
-    <%= f.text_field :last_name %></div>
-
-  <div><%= f.label :email %>
-    <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password %></div>
-
-  <div><%= f.submit "Update", class: 'btn-primary' %>
-      <%= link_to "Back", :back %></div>
+  <div class="actions">
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :email %>
+    <%= f.input :password, hint: "leave blank if you don't want to change it" %>
+    <%= f.input :password_confirmation %>
+    <%= f.input :current_password, hint: 'we need your current password to confirm your changes' %></div>
+  </div>
+  
+  <div class="form-actions">
+    <%= f.submit "Update", class: 'btn btn-primary' %>
+    <%= link_to "Back", :back %>
+  </div>
 <% end %>
 
 <hr />
