--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,27 +2,26 @@
   <h1>Sign up</h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+<%= simple_form_for(resource, 
+    as: resource_name, 
+    url: registration_path(resource_name),
+    html: { class: 'form-horizontal' }
+  ) do |f| %>
+  
   <%= devise_error_messages! %>
 
-  <%= honeypot %>
-
-  <div><%= f.label :first_name %>
-    <%= f.text_field :first_name %></div>
-
-  <div><%= f.label :last_name %>
-    <%= f.text_field :last_name %></div>
-
-  <div><%= f.label :email %>
-    <%= f.email_field :email %></div>
-
-  <div><%= f.label :password %>
-    <%= f.password_field :password %>
-
-  <div><%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up", class: 'btn-primary' %></div>
+  <div class="inputs">
+    <%= honeypot %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :email, as: :email %>
+    <%= f.input :password %>
+    <%= f.input :password_confirmation %>
+  </div>
+  
+  <div class="form-actions">
+    <%= f.submit "Sign up", class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
