--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -2,13 +2,21 @@
   <h1>Resend unlock instructions</h1>
 </div>
 
-<%= form_for(resource, :as => resource_name, :url => unlock_path(resource_name), :html => { :method => :post }) do |f| %>
+<%= simple_form_for(resource,
+    as: resource_name,
+    url: unlock_path(resource_name),
+    html: { :method => :post, class: 'form-horizontal' }
+  ) do |f| %>
+  
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %>
-  <%= f.email_field :email %></div>
+  <div class="actions">
+    <%= f.input :email %>
+  </div>
 
-  <div><%= f.submit "Resend unlock instructions", class: 'btn-primary' %></div>
+  <div class="form-actions">
+    <%= f.submit "Resend unlock instructions", class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
