tweet btn ajax ok

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,6 +11,7 @@
         :related => "_clyfe:vaijab"
       } %>
     </span>
+    <script type="text/javascript" src="//platform.twitter.com/widgets.js"></script>
   </h1>
 </div>
 
