--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -14,7 +14,7 @@
   the world for better response times and availability. 
 </p>
 
-<div class="row">
+<div class="row donate-actions">
   <div class="span4">
     <h3>&euro; EUR</h3>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
