fix when domain ownership validation fails, for inputs are not reshown

--- a/app/assets/stylesheets/overrides.css.scss
+++ b/app/assets/stylesheets/overrides.css.scss
@@ -16,4 +16,8 @@
     a.as_cancel {
         vertical-align: middle;
     }
+    .active-scaffold ol {
+        display: table;
+        margin-left: 0;
+    }
 }
