nav state, pjax nav state, refactor and cleanup

--- a/app/views/fragments/_navigation.html.erb
+++ b/app/views/fragments/_navigation.html.erb
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
       </a>
       
-      <%= link_to('EntryDNS', root_path, class: 'brand', data: {pjax: '#main'}) %>
+      <%= link_to('EntryDNS', root_path, class: 'brand') %>
 
       <div class="nav-collapse">
         <% if user_signed_in? %>
