--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -1,8 +1,8 @@
-<ul class="nav nav-pills">
-  <li><%= link_to "Sign in", new_session_path(resource_name) %></li>
-  <li><%= link_to "Sign up", new_registration_path(resource_name) %><br /></li>
-  <li><%= link_to "Forgot your password?", new_password_path(resource_name) %></li>
-  <li><%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %></li>
-  <li><%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %></li>
-</ul>
+<% semantic_navigation :devise_nav, html: { class: 'nav nav-pills pjax-nav' } do |n| %>
+  <%= n.item "Sign in", link: new_session_path(resource_name) %>
+  <%= n.item "Sign up", link: new_registration_path(resource_name) %>
+  <%= n.item "Forgot your password?", link: new_password_path(resource_name) %>
+  <%= n.item "Didn't receive confirmation instructions?", link: new_confirmation_path(resource_name) %>
+  <%= n.item "Didn't receive unlock instructions?", link: new_unlock_path(resource_name) %>
+<% end %>
 
