--- a/app/views/fragments/navigation/_application.html.erb
+++ b/app/views/fragments/navigation/_application.html.erb
@@ -1,51 +1,34 @@
-<ul class="nav">
-  <li><%#= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %></li>
-  <li>
-    <%= link_to domains_path, data: {pjax: '#main'} do %>
-      <i class="icon-white icon-th-list"></i> My Domains
-    <% end %>
-  </li>
-  <li>
-    <%= link_to hosts_path, data: {pjax: '#main'} do %>
-      <i class="icon-white icon-th"></i> Dynamic Hosts
-    <% end %>
-  </li>
-  <li>
-    <%= link_to(page_path('help'), data: {pjax: '#main'}) do %>
-      <i class="icon-white icon-question-sign"></i> Help & Support
-    <% end %>
-  </li>
-</ul>
+<% semantic_navigation :application_nav, html: { class: 'nav pjax-nav' } do |n| %>
+  <%#= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %>
+  <%= n.item '', link: domains_path do %>
+    <i class="icon-white icon-th-list"></i> My Domains
+  <% end %>
+  <%= n.item '', link: hosts_path do %>
+    <i class="icon-white icon-th"></i> Dynamic Hosts
+  <% end %>
+  <%= n.item '', link: page_path('help') do %>
+    <i class="icon-white icon-question-sign"></i> Help & Support
+  <% end %>
+<% end %>
 
-<ul class="nav pull-right">
-  <li>
-    <%= link_to(Settings.news_link, rel: 'tooltip', title: Settings.news_link) do %>
-      <i class="icon-white icon-share-alt"></i> News
-    <% end %>
-  </li>
-  <li>
-    <%= link_to(page_path('donate'), rel: 'tooltip', title: 'PayPal', 
-      class: 'highlight', data: {pjax: '#main'}) do %>
-        <i class="icon-white icon-heart"></i> Donate
-      <% end %>
-    </li>
-
+<% semantic_navigation :user_nav, html: { class: 'nav pull-right pjax-nav' } do |n| %>
+  <%= n.item '', link: Settings.news_link, html: { rel: 'tooltip', title: Settings.news_link } do %>
+    <i class="icon-white icon-share-alt"></i> News
+  <% end %>
+  <%= n.item '', link: page_path('donate'), html: { rel: 'tooltip', title: 'PayPal', class: 'highlight' } do %>
+    <i class="icon-white icon-heart"></i> Donate
+  <% end %>
     <li class="dropdown">
       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
         <i class="icon-white icon-user"></i> <%= current_user.email %> <b class="caret"></b>
       </a>
-      
-      <ul class="dropdown-menu">
-        <li>
-          <%= link_to(edit_user_registration_path, rel: 'tooltip', 
-            :title => "IP: #{client_remote_ip}", data: {pjax: '#main'}) do %>
-            <i class="icon-cog"></i> Settings
-          <% end %>
-        </li>
-        <li>
-          <%= link_to(destroy_user_session_path, method: :delete) do %>
-            <i class="icon-off"></i> Sign out
-          <% end %>
-        </li>
-      </ul>
-  </ul>
+      <%= n.group do %>
+        <%= n.item '', link: edit_user_registration_path, html: { rel: 'tooltip', title: "IP: #{client_remote_ip}" } do %>
+          <i class="icon-cog"></i> Settings
+        <% end %>
+        <%= n.item '', link: destroy_user_session_path, link_html: { data: { :'skip-pjax' => true } } do %>
+          <i class="icon-off"></i> Sign out
+        <% end %>
+      <% end %>
+    </li>
+<% end %>
