--- a/app/views/fragments/_bottom.html.erb
+++ b/app/views/fragments/_bottom.html.erb
@@ -3,7 +3,7 @@
     <p class="pull-right">
       <a href="#">Back to top</a>
     </p>
-    <p>
+    <p class="pjax-nav">
       <%= link_to('Terms & Conditions', page_path('terms'), :data => {:pjax => '#main'}) %> &bull;
       <%= link_to('Privacy Policy', page_path('privacy'), :data => {:pjax => '#main'}) %> &bull;
       <%= link_to('Contact', page_path('contact'), :data => {:pjax => '#main'}) %> &bull;
