--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -16,7 +16,7 @@
     <%= f.input :email %>
     <%= f.input :password, hint: "leave blank if you don't want to change it" %>
     <%= f.input :password_confirmation %>
-    <%= f.input :current_password, hint: 'we need your current password to confirm your changes' %></div>
+    <%= f.input :current_password, hint: 'we need your current password to confirm your changes' %>
   </div>
   
   <div class="form-actions">
