--- a/app/views/pages/home/_headlines.html.erb
+++ b/app/views/pages/home/_headlines.html.erb
@@ -1,29 +1,25 @@
-<h3>A friendly service you can use right away</h3>
-
+<h3>
+  Our kick-ass interface makes managing DNS a breeze.
+</h3>
+<br />
 <p>
-  We're people passionate about technology and we built  to fill our own needs,
-  a <em class="mk-point">fast, easy to use</em> service 
-  that takes care of <em class="mk-point">all your configuration needs</em>.
+  Easily manage multiple domains and hosts,
+  collaborate and manage work-sharing with other sysadmins,
+  automate and simplify infrastructure.
 </p>
-
+<br />
 <ul>
   <li>
-    Intuitive interface
+    Friendly support from the founders
   </li>
   <li>
-    Friendly and reliable support
+    Offsite backup, every 3 hours
   </li>
   <li>
-    Full offsite backup, daily
+    We are monitoring everything to work smoothly
   </li>
   <li>
     Complete developers API's
-  </li>
-  <li>
-    Now serving: 
-    <em class="mk-point"><%= User.count %></em> users,
-    <em class="mk-point"><%= Domain.count %></em> domains and 
-    <em class="mk-point"><%= Record.count %></em> records!
   </li>
 </ul>
 
