--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
   <h1>
-    Totally Free DNS service for everyone 
+    Free DNS management service for everyone 
     <small>created by Geeks</small>
     <span class="pull-right">
       <%= link_to 'Tweet', "https://twitter.com/share", :class => "twitter-share-button", :data => {
