action call spacing on mobile devices

--- a/app/assets/stylesheets/pages/home.css.scss
+++ b/app/assets/stylesheets/pages/home.css.scss
@@ -1,6 +1,7 @@
 .call-to-action {
     text-align: center;
     margin-top: 3em;
+    margin-bottom: 3em;
     padding-right: 6em;
     small {
         font-style: italic;
