--- a/app/views/domains/_list_record_columns.html.erb
+++ b/app/views/domains/_list_record_columns.html.erb
@@ -3,26 +3,8 @@
 <% columns.each do |column| %>
   <% authorized = record.authorized_for?(:crud_type => :read, :column => column.name) -%>
   <% column_value = authorized ? get_column_value(record, column) : active_scaffold_config.list.empty_field_text -%>
-  <% can_crud_permissions = can?(:crud_permissions, record) -%>
 
-  <% if column.name == :name %>
-    <td class="<%= column_class(column, column_value, record) %>" >
-      <% column_value = 'Manage All Records (0)' if column_value == '-' %>
-      <%= if authorized
-          link = render_list_column(column_value, column, record)
-          link_to link, "http://#{link}"
-        else
-          column_value
-        end %>
-      <% unless can_crud_permissions %>
-        <% who = "<strong>#{record.user.name}</strong> #{mail_to record.user.email}" %>
-        <i class="icon-share" style="float: right;" rel="popover"
-          data-original-title="Shared domain"
-          data-content="This domain was shared with you by <%=h who %>"
-        ></i>
-      <% end %>
-    </td>
-  <% elsif column.name == :records %>
+  <% if column.name == :records %>
     <td class="<%= column_class(column, column_value, record) %>" >
       <% column_value = 'Manage All Records (0)' if column_value == '-' %>
       <%= authorized ? render_list_column(column_value, column, record) : column_value %>
@@ -32,7 +14,7 @@
       <% 
       if column_value == '-'
         column_value = 'Permissions (0)'
-        authorized &&= can_crud_permissions
+        authorized &&= can?(:crud_permissions, record)
       end
       %>
       <%= authorized ? render_list_column(column_value, column, record) : column_value %>
