--- a/app/views/layouts/errors.html.erb
+++ b/app/views/layouts/errors.html.erb
@@ -12,14 +12,14 @@
     <%= csrf_meta_tag %>
   </head>
   <body class="errors">
-    <%= render :partial => 'fragments/top' %>
+    <%= render 'shared/top' %>
 
     <div class="container" id="main">
       <div data-pjax-container="true">
         <%= flash_display 'flash' %>
         <%= yield %>
       </div>
-      <%= render :partial => 'fragments/bottom' %>
+      <%= render 'shared/bottom' %>
     </div>
 
   </body>
