--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,7 +20,7 @@
 
 <h4>How can you benefit from this</h4>
 
-<%= render 'pages/fragments/benefits' %>
+<%= render 'pages/shared/benefits' %>
 
 <p>
   We are open to new ideas or suggestions how to make the service better for you to use. 
