--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-fixed-top">
   <div class="navbar-inner">
-    <div class="container">
+    <div class="container pjax-nav">
 
       <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
         <span class="icon-bar"></span>
@@ -12,9 +12,9 @@
 
       <div class="nav-collapse">
         <% if user_signed_in? %>
-          <%= render 'fragments/navigation/application' %>
+          <%= render 'shared/navigation/application' %>
         <% else %>
-          <%= render 'fragments/navigation/public' %>
+          <%= render 'shared/navigation/public' %>
         <% end %>
       </div>
 
