--- a/app/views/shared/navigation/_application.html.erb
+++ b/app/views/shared/navigation/_application.html.erb
@@ -1,4 +1,4 @@
-<% semantic_navigation :application_nav, html: { class: 'nav pjax-nav' } do |n| %>
+<% semantic_navigation :application_nav, html: { class: 'nav' } do |n| %>
   <%#= link_to('Dashboard', dashboard_path, :data => {:pjax => '#main'}) %>
   <%= n.item '', link: domains_path do %>
     <i class="icon-white icon-th-list"></i> My Domains
@@ -11,7 +11,7 @@
   <% end %>
 <% end %>
 
-<% semantic_navigation :user_nav, html: { class: 'nav pull-right pjax-nav' } do |n| %>
+<% semantic_navigation :user_nav, html: { class: 'nav pull-right' } do |n| %>
   <%= n.item '', link: Settings.news_link, html: { rel: 'tooltip', title: Settings.news_link } do %>
     <i class="icon-white icon-share-alt"></i> News
   <% end %>
