AS released, fix #103

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -3,13 +3,15 @@
   <body class="public">
     <%= render 'shared/navigation' %>
 
-    <div data-pjax-container="true" id="main">
-      <%= flash_display 'flash' %>
-      <%= yield %>
+    <div id="main">
+      <div data-pjax-container="true">
+        <%= flash_display 'flash' %>
+        <%= yield %>
+      </div>
     </div>
+    
     <div class="container">
       <%= render 'shared/bottom' %>
     </div>
-
   </body>
 </html>
