--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -8,8 +8,10 @@
         <%= flash_display 'flash' %>
         <%= yield %>
       </div>
-      <%= render 'shared/bottom' %>
     </div>
 
+    <div class="container">
+      <%= render 'shared/bottom' %>
+    </div>
   </body>
 </html>
