--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,8 +20,10 @@
         <%= flash_display 'flash' %>          
         <%= yield %>
       </div>
-      <%= render 'shared/bottom' %>
     </div>
     
+    <div class="container">
+      <%= render 'shared/bottom' %>
+    </div>
   </body>
 </html>
