responsive slides and call to action

--- a/app/views/pages/home/_slides.html.erb
+++ b/app/views/pages/home/_slides.html.erb
@@ -11,9 +11,8 @@
 <script type="text/javascript">
   $("#slides")
   .slides({
-    width: 470,
     navigation: false,
-    //responsive: true,
+    responsive: true,
     slide: {
       interval: 500
     },
