stronger call to action

--- a/app/views/pages/shared/_action.html.erb
+++ b/app/views/pages/shared/_action.html.erb
@@ -1,6 +1,6 @@
 <div class="call-to-action">
   <%= image_tag 'marketing/arrow_left.png' %>
-  <%= link_to new_user_registration_path, class: 'btn btn-success btn-large' do %>
+  <%= link_to new_user_registration_path, class: 'btn btn-primary btn-large' do %>
     <strong>Create an Account Now</strong><br>
     <small>It's free, sign up in 60 seconds.</small>
   <% end %>
