--- a/app/views/pages/home/_slides.html.erb
+++ b/app/views/pages/home/_slides.html.erb
@@ -9,8 +9,7 @@
 </div>
 
 <script type="text/javascript">
-  $("#slides")
-  .slides({
+  $("#slides").slides({
     navigation: false,
     responsive: true,
     slide: {
@@ -21,6 +20,5 @@
     },
     playInterval: 8000,
     pauseInterval: 16000
-  })
-  .slides('play');
+  }).slides('play');
 </script>
